recursion.lessons.recursion.koch.Crab.scala.error
Crab:3: error: ')' expected but '}' found.
    crab(levels,length*Math.sqrt(2)}
                                   ^Crab:8: error: expected start of definition
	override def run() {
                 ^Crab:11: error: Unmatched closing brace '}' ignored here
}
^